Cambios para asociar buscador a un elemento y validaciones cuando se delimita la busqueda a un elemento y no esta en presente en el html

--- a/trunk/assets/css/searchinside.css
+++ b/trunk/assets/css/searchinside.css
@@ -23,6 +23,16 @@
   display: none;
   z-index: 99999; }
 
+#searchinside.appended{
+  position: static;
+  display: block;
+  width: 100%;
+}
+
+#searchinside.appended #wpsi-cancel-button{
+  display: none !important;
+}
+
 #wpsi-search-input {
   height: 100%;
   width: 100%;
