--- a/public/css/searchinside-admin.css
+++ b/public/css/searchinside-admin.css
@@ -7,331 +7,4 @@
  * @link       https://github.com/Josantonius/Search-Inside.git
  * @since      1.0.0
  */
-
-/**
- * Layout content
- */
-.jst-layout {
-	display: block !important;
-	padding: 20px;
-	margin-left: -20px; } 
-
-.jst-card {
-	max-width: 750px; }
-
-.jst-card-button {
-  margin-top: -95px; }
-
-/**
- * Header content 
- */
-.jst-header-content {
-	padding: 30px !important;
-	margin-top: 0px !important;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px; 
-  color: rgba(0,0,0, 0.87); }
-
-.jst-header-title {
-	color: #FFFFFF !important;
-  font-size: 28px !important;
-  font-weight: 300 !important; }
-
-/**
- * Footer content 
- */
-#jst-footer {
-  background: rgb(35, 40, 45) !important;
-  margin-right: -20px !important;
-  margin-bottom: -20px !important;
-  margin-left: -20px !important;
-  margin-top: 10px !important; }
-
-.mdl-mini-footer {
-  background: none !important; 
-  padding: 10px 22px !important; 
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 10px 20px;
-  color: #555d66; }
-
-.jst-made-with {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: nowrap;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  color: #636A73;
-  position: relative;
-  letter-spacing: 1px;
-  font-size: inherit;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  margin: auto; }
-
-.jst-made-with a {
-  margin-left: 5px; }
-
-.jst-made-with-icon {
-  padding: 3px;
-  font-size: 19px !important;
-  color: #CE1631; }
-
-/**
- * Color picker content
- */
-#wpsi-colorPicker, #wordColors {
-  display: table;
-  margin: 0 auto; }
-
-.wpsi-color-picker {
-  margin-top: -51px; }
-
-#wordColors {
-  display: none;
-  text-align: center;
-  font-size: 1.1em;
-  border-bottom: none !important; }
-
-#wordColorsSection {
-  margin-bottom: 35px; }
-
-.colorOption {
-  width:4vmin;
-  height:4vmin;
-  background: rgb(255, 255, 255);
-  flex-grow:0;
-  flex-shrink:0;
-  border-radius:999px;
-  margin-right:1vmin;
-  position:relative;
-  cursor:pointer; }
-
-.colorOption.selected:before {
-  display:block;
-  content:' ';
-  background:white;
-  width:1vmin;
-  height:0.5vmin;
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:rotate(45deg);
-  margin-left:-1vmin; }
-
-.colorOption.selected:after {
-  display:block;
-  content:' ';
-  background:white;
-  width:2vmin;
-  height:0.5vmin;
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:rotate(-45deg);
-  margin-left:-0.7vmin;
-  margin-top:-0.2vmin; }
-
-#colorsWrapper {
-  display:flex; }
-
-/**
- * Form content
- */
-#search-inside-form {
-  width: 100% !important; }
-
-.search-fields {
-  width: 300px;
-}
-
-/**
- * Form input text content
- */
-input[type=text], input[type=text]:focus {
-  border-top: none !important;
-  border-left: none !important;
-  border-right: none !important;
-  border-bottom: 1px solid rgba(0,0,0,.12);
-  -webkit-box-shadow: transparent !important;
-  box-shadow: none !important; }
-  
-.mdl-textfield {
-  width: 100% !important; }
-
-#searchIn {
-  width: 300px;
-  max-width: 100%; }
-
-/**
- * Shortcode
- */
-.shortcode-example {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  font-size: 16px;
-  margin: -3px 40px 12px 40px;
-  border: 2px dashed rgba(0,0,0, 0.26);
-  padding: 5px;
-  cursor: text;
-  text-align: center;
-  color: #2196f3; }
-
-/**
- * Form select content
- */
-.mdl-select {
-  position: relative;
-  font-size: 16px;
-  display: inline-block;
-  box-sizing: border-box;
-  width: 300px;
-  max-width: 100%;
-  margin-left: -4px;
-  padding: 20px 0; }
-
-.mdl-select__input {
-  border: none;
-  border-bottom: 1px solid rgba(0,0,0, 0.12);
-  display: inline-block;
-  font-size: 16px;
-  margin: 0;
-  padding: 4px 0;
-  width: 100%;
-  background: 16px;
-  text-align: left;
-  color: inherit; }
-
-.mdl-select.is-focused .mdl-select__input {	outline: none; }
-.mdl-select.is-invalid .mdl-select__input { 
-  border-color: rgb(222, 50, 38);
-  box-shadow: none; }
-
-.mdl-select.is-disabled .mdl-select__input {
-  background-color: transparent;
-  border-bottom: 1px dotted rgba(0,0,0, 0.12); }
-
-.mdl-select__label {
-  bottom: 0;
-  color: rgba(0,0,0, 0.26);
-  font-size: 16px;
-  left: 0;
-  right: 0;
-  pointer-events: none;
-  position: absolute;
-  top: 26px;
-  width: 100%;
-  overflow: hidden;
-  white-space: nowrap;
-  text-align: left; }
-
-.mdl-select.is-dirty .mdl-select__label { visibility: hidden; }
-
-.mdl-select--floating-label .mdl-textfield__label {
-  -webkit-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); }
-
-.mdl-select--floating-label.is-focused .mdl-select__label,
-.mdl-select--floating-label.is-dirty .mdl-select__label {
-  color: rgb(33, 150, 243);
-  font-size: 12px;
-  top: 4px;
-  visibility: visible; }
-
-.mdl-select--floating-label.is-focused .mdl-select__expandable-holder .mdl-select__label,
-.mdl-select--floating-label.is-dirty .mdl-select__expandable-holder .mdl-select__label {
-  top: -16px; }
-
-.mdl-select--floating-label.is-invalid .mdl-select__label {
-  color: rgb(222, 50, 38);
-  font-size: 12px; }
-
-.mdl-select__label:after {
-  background-color: rgb(33, 150, 243);
-  bottom: 20px;
-  content: '';
-  height: 2px;
-  left: 45%;
-  position: absolute;
-  -webkit-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  visibility: hidden;
-  width: 10px; }
-
-.mdl-select.is-focused .mdl-select__label:after {
-  left: 0;
-  visibility: visible;
-  width: 100%; }
-
-.mdl-select.is-invalid .mdl-select__label:after {
-  background-color: rgb(222, 50, 38); }
-
-.mdl-select__error {
-  color: rgb(222, 50, 38);
-  position: absolute;
-  font-size: 12px;
-  margin-top: 3px;
-  visibility: hidden; }
-
-.mdl-select.is-invalid .mdl-select__error {
-  visibility: visible; }
-
-.mdl-select__expandable-holder {
-  display: inline-block;
-  position: relative;
-  margin-left: 32px;
-  -webkit-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-block;
-  max-width: 0.1px; }
-
-.mdl-select.is-focused .mdl-select__expandable-holder, .mdl-select.is-dirty .mdl-select__expandable-holder {
-  max-width: 600px; }
-
-.mdl-select__expandable-holder .mdl-select__label:after {
-  bottom: 0; }
-
-/**
- * Media content
- */
-@media (min-width: 400px) {
-	.mdl-dialog {
-		width: 70% !important; }}
-
-@media (max-width: 500px) {
-	#img-file-upload {
-		width: 80% !important; }}
-
-@media (min-width: 800px) {
-	.mdl-dialog {
-		width: 55% !important; }}
-
-@media (min-width: 1200px) {
-	.mdl-dialog {
-		width: 45% }}
-
-@media (min-width: 840px) {
-	.jst-layout {
-		padding: 20px;
-	  margin-left: -20px; } }
-
-@media (min-width: 840px) {
-  .jst-card {
-    max-width: 429px; }
-}
-@media (max-width: 839px) {
-  .colorOption {
-    width: 7vmin !important;
-    height: 7vmin !important; }
-  .wpsi-color-picker{
-    text-align: center; }
-}
+@import url(http://fonts.googleapis.com/css?family=Montserrat);a:hover,a:active,a:focus{outline:none;outline-style:none;box-shadow:none;border-color:transparent}.jst-layout{display:block !important;padding:20px;margin-left:-20px}@media (max-width: 782px){.mdl-grid{margin-left:9px !important}}#jst-stars{right:0;margin-right:50px;position:absolute;margin-top:26px;width:100px;cursor:pointer}#plugin-rating [class*=dashicons-star-]{color:#fdda2e;text-decoration:none}#plugin-rating [class*=dashicons-star-]:hover{color:#f1f1f1 !important}@media (max-width: 504px){#jst-stars{right:0;position:relative;margin-top:10px}}.jst-header-content{padding:30px !important;margin-top:0px !important;font-size:14px;font-weight:400;line-height:20px;color:rgba(0,0,0,0.87)}.jst-header-title{color:#fff !important;font-size:28px !important;font-weight:300 !important}@media (max-width: 504px){.jst-header-title{font-size:27px !important}}.jst-dialog{line-height:42px;margin-bottom:5px;color: #32373c}.jst-dialog-content{max-width:650px;text-align:center}.jst-dialog-subtitle{font-size:14px !important;text-align:justify !important}@media (min-width: 783px){.jst-dialog-content{left:36px;width:60% !important}}@media (max-width: 782px){.jst-dialog-content{left:0px;width:80% !important}}@media (min-width: 961px){.jst-dialog-content{left:160px;width:55% !important}}.icon-satisfied{position:absolute;margin:-3px 0px 0px 4px}#donate-button{background:#23282d;position:absolute;right:0;margin-right:7px;margin-top:-1px}#symbol{height:27px;margin-top:-4px;margin-left:2px}.svg-paypal-border,.svg-paypal-letter1to3{fill:#1B557D}.svg-paypal-letter4to6{fill:#107DB0}#paypal-button{width:180px;height:55px;background:rgba(158,158,158,0.2) !important;box-shadow:0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.2),0 1px 5px 0 rgba(0,0,0,0.12)}.svg-paypal{margin-top:-42px;margin-left:8px;width:140px}.btn-dogecoin{font-size:14px;white-space:nowrap;position:relative;overflow:hidden;margin-top:30px !important;margin-bottom:3px !important;cursor:pointer;font-family:"Montserrat";width:160px;height:45px;padding:5px 10px;background:#f4b840 !important;border-radius:2px;color:#333;text-transform:uppercase;-webkit-transition:width .35s ease;transition:width .35s ease;margin:80px auto}.btn-dogecoin span{display:block}.btn-dogecoin .currency{font-size:1.1em}.btn-dogecoin .currency:before{content:"Donate with";font-size:.65em;display:block}.btn-dogecoin .symbol{-webkit-transition:all .2s ease;transition:all .2s ease;font-size:2.3em;border:2px solid #333;border-radius:360px;padding:4px;width:33px;height:33px;text-align:center;line-height:1em;margin-right:5px}.btn-dogecoin p{-webkit-transition:all .2s ease;transition:all .2s ease;padding:0;margin:0}.btn-dogecoin .symbol,.btn-dogecoin p{display:inline-block;white-space:nowrap}.btn-dogecoin:hover p{-webkit-transform:translateX(120px);transform:translateX(120px)}.btn-dogecoin:hover .symbol{-webkit-transform:translateX(40px);transform:translateX(40px)}.btn-dogecoin.opened{width:390px}.btn-dogecoin.opened:hover p{-webkit-transform:inherit;transform:inherit;cursor:text}.btn-dogecoin.opened:hover .symbol{-webkit-transform:inherit;transform:inherit}.btn-dogecoin.opened .currency{text-transform:initial}.btn-dogecoin.opened .currency:before{content:"Thank you !";text-transform:uppercase}@media (max-width: 782px){.btn-dogecoin.opened{width:89% !important}.btn-dogecoin .currency:before{display:none !important}.btn-dogecoin:hover .symbol{-webkit-transform:translateX(35px) !important;transform:translateX(35px) !important}}.card-title{color:#23282d !important}#custom-section{padding:16px 0px}.module-state-btn{margin:5px 0px -13px -15px}.module-btn-active{background-color:#009688 !important}.jst-card{max-width:390px}.jst-card--border{border-top:1px solid rgba(0,0,0,0.1);width:100% !important}.demo-card-wide>.mdl-card__title{color:#fff;height:176px}.jst-card-button{margin-top:-95px}#wpsi-colorPicker,#wordColors{margin:0 auto}.wpsi-color-picker{margin-top:-51px}#wordColors{display:none;text-align:center;font-size:1.1em;border-bottom:none !important}#wordColorsSection{margin-bottom:35px}.colorOption{width:35px;height:35px;background:#fff;flex-grow:0;flex-shrink:0;border-radius:999px;margin-right:13px;position:relative;cursor:pointer}.colorOption.selected:before{display:block;content:" ";background:#fff;width:1vmin;height:.5vmin;position:absolute;top:50%;left:50%;transform:rotate(45deg);margin-left:-1vmin}.colorOption.selected:after{display:block;content:" ";background:#fff;width:2vmin;height:.5vmin;position:absolute;top:50%;left:50%;transform:rotate(-45deg);margin-left:-0.7vmin;margin-top:-0.2vmin}#colorsWrapper{display:flex}@media (max-width: 503px){.colorOption{width:6vmin !important;height:6vmin !important;margin-right:2vmin}}@media (max-width: 375px){#color-picker-section{margin-top:-16px;margin-left:-7px}}.mdl-select{position:relative;font-size:16px;display:inline-block;box-sizing:border-box;width:300px;max-width:100%;margin-left:-4px;padding:20px 0}.mdl-select__input{border:none;border-bottom:1px solid rgba(0,0,0,0.12);display:inline-block;font-size:16px;margin:0;padding:4px 0;width:100%;background:16px;text-align:left;color:inherit}.mdl-select.is-focused .mdl-select__input{outline:none}.mdl-select.is-invalid .mdl-select__input{border-color:#de3226;box-shadow:none}.mdl-select.is-disabled .mdl-select__input{background-color:transparent;border-bottom:1px dotted rgba(0,0,0,0.12)}.mdl-select__label{bottom:0;color:rgba(0,0,0,0.26);font-size:16px;left:0;right:0;pointer-events:none;position:absolute;top:26px;width:100%;overflow:hidden;white-space:nowrap;text-align:left}.mdl-select.is-dirty .mdl-select__label{visibility:hidden}.mdl-select--floating-label .mdl-textfield__label{-webkit-transition-duration:.2s;transition-duration:.2s;-webkit-transition-timing-function:cubic-bezier(.4, 0, .2, 1);transition-timing-function:cubic-bezier(.4, 0, .2, 1)}.mdl-select--floating-label.is-focused .mdl-select__label,.mdl-select--floating-label.is-dirty .mdl-select__label{color:#2196f3;font-size:12px;top:4px;visibility:visible}.mdl-select--floating-label.is-focused .mdl-select__expandable-holder .mdl-select__label,.mdl-select--floating-label.is-dirty .mdl-select__expandable-holder .mdl-select__label{top:-16px}.mdl-select--floating-label.is-invalid .mdl-select__label{color:#de3226;font-size:12px}.mdl-select__label:after{background-color:#2196f3;bottom:20px;content:"";height:2px;left:45%;position:absolute;-webkit-transition-duration:.2s;transition-duration:.2s;-webkit-transition-timing-function:cubic-bezier(.4, 0, .2, 1);transition-timing-function:cubic-bezier(.4, 0, .2, 1);visibility:hidden;width:10px}.mdl-select.is-focused .mdl-select__label:after{left:0;visibility:visible;width:100%}.mdl-select.is-invalid .mdl-select__label:after{background-color:#de3226}.mdl-select__error{color:#de3226;position:absolute;font-size:12px;margin-top:3px;visibility:hidden}.mdl-select.is-invalid .mdl-select__error{visibility:visible}.mdl-select__expandable-holder{display:inline-block;position:relative;margin-left:32px;-webkit-transition-duration:.2s;transition-duration:.2s;-webkit-transition-timing-function:cubic-bezier(.4, 0, .2, 1);transition-timing-function:cubic-bezier(.4, 0, .2, 1);display:inline-block;max-width:.1px}.mdl-select.is-focused .mdl-select__expandable-holder,.mdl-select.is-dirty .mdl-select__expandable-holder{max-width:600px}.mdl-select__expandable-holder .mdl-select__label:after{bottom:0}.shortcode-example{font-family:"Roboto","Helvetica","Arial",sans-serif;font-size:16px;margin:-3px 40px 12px 40px;border:2px dashed rgba(0,0,0,0.26);padding:5px;cursor:text;text-align:center;color:#2196f3}input[type=text]{border-top:none !important;border-left:none !important;border-right:none !important;border-bottom:1px solid rgba(0,0,0,0.12);-webkit-box-shadow:transparent !important;box-shadow:none !important}input[type=text]:focus{border-top:none !important;border-left:none !important;border-right:none !important;border-bottom:1px solid rgba(0,0,0,0.12);-webkit-box-shadow:transparent !important;box-shadow:none !important}.mdl-textfield{width:100% !important}#searchIn{width:300px;max-width:100%}@media (max-width: 375px){.mdl-checkbox__label{font-size:14px !important}}#search-inside-form{width:100% !important}.search-fields{width:100%}@media (max-width: 400px){#htmlTag{width:115px}}#jst-footer{background:#23282d !important;margin-right:-20px !important;margin-bottom:-20px !important;margin-left:-20px !important;margin-top:10px !important;display:none}.mdl-mini-footer{background:none !important;padding:10px 22px !important;position:absolute;bottom:0;left:0;right:0;padding:10px 20px;color:#555d66}.jst-made-with{display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:nowrap;-ms-flex-wrap:nowrap;flex-wrap:nowrap;color:#636A73;position:relative;letter-spacing:1px;font-size:inherit;-webkit-align-items:center;-ms-flex-align:center;margin:auto}.jst-made-with a{margin-left:5px;text-decoration:none}.jst-made-with-icon{padding:1px 5px 0px 0px;font-size:20px !important;color:#23282d}.info-icon{cursor:pointer}.jst-fingerpoint{color:#666;margin-left:2px}
