Last update before archiving the repository

--- a/public/css/source/search-inside-admin.css
+++ b/public/css/source/search-inside-admin.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /**
- * Search Inside Wordpress Plugin.
+ * Search Inside WordPress Plugin.
  *
  * @author    Josantonius <hello@josantonius.com>
  * @package   josantonius/search-inside
