--- a/public/css/source/search-inside.css
+++ b/public/css/source/search-inside.css
@@ -1,5 +1,5 @@
 /**
- * Search Inside Wordpress Plugin.
+ * Search Inside WordPress Plugin.
  *
  * @author    Josantonius <hello@josantonius.com>
  * @package   josantonius/search-inside
